# artsdatabanken-common

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fts.sql  generate.py  generate.sh  metadata.json  pyproject.toml
.github/workflows/: publish.yml
