[project]
name = "artsdatabanken-common"
version = "0.1"
description = "Fetch common data from artsdatabanken.no"
authors = [
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = [
    "openpyxl>=3.0.10",
    "sqlite-utils>=3.26.1",
    "setuptools>=67.3.2",
    "beautifulsoup4>=4.12.2",
]
requires-python = ">=3.9"
license = {text = "GPLv3"}

[project.optional-dependencies]
datasette = [
    "datasette>=0.64.1",
    "datasette-reconcile>=0.2.2",
]

[tool.pdm]

[tool.black]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.ruff]
fix = true
ignore = ["E501"]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
